CREATE TYPE "status" AS ENUM (
  'pending',
  'running',
  'success',
  'failure'
);

CREATE TABLE "schedules" (
  "id" uuid PRIMARY KEY,
  "cron" varchar NOT NULL,
  "hook" varchar NOT NULL,
  "owner" varchar NOT NULL,
  "data" varchar NOT NULL DEFAULT '',
  "active" bool NOT NULL DEFAULT true,
  "till" timestamptz NOT NULL DEFAULT ('0001-01-01 00:00:00Z'),
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "last_modified" timestamptz NOT NULL
);

CREATE TABLE "next_occurence" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "schedule" uuid NOT NULL,
  "worker" uuid DEFAULT null,
  "manual" bool NOT NULL DEFAULT false,
  "status" status NOT NULL DEFAULT 'pending',
  "occurence" timestamptz DEFAULT null,
  "last_updated" timestamptz NOT NULL
);

CREATE TABLE "history" (
  "occurence_id" integer PRIMARY KEY NOT NULL,
  "schedule" uuid NOT NULL,
  "status" status NOT NULL,
  "details" text NOT NULL,
  "manual" bool NOT NULL DEFAULT false,
  "scheduled_at" timestamptz NOT NULL,
  "started_at" timestamptz NOT NULL,
  "completed_at" timestamptz NOT NULL
);

CREATE TABLE "punch_card" (
  "id" uuid PRIMARY KEY,
  "last_punch" timestamptz NOT NULL,
  "created_at" timestamptz DEFAULT (now())
);

CREATE INDEX ON "schedules" ("owner");

CREATE INDEX ON "next_occurence" ("worker");

CREATE INDEX ON "next_occurence" ("occurence");

CREATE INDEX ON "next_occurence" ("schedule");

CREATE UNIQUE INDEX ON "next_occurence" ("schedule", "occurence");

CREATE INDEX ON "history" ("schedule");

COMMENT ON COLUMN "schedules"."till" IS 'till what timestamp this schedule will run';

ALTER TABLE "next_occurence" ADD FOREIGN KEY ("schedule") REFERENCES "schedules" ("id");

ALTER TABLE "history" ADD FOREIGN KEY ("schedule") REFERENCES "schedules" ("id") ON DELETE CASCADE;

ALTER TABLE "next_occurence" ADD FOREIGN KEY ("worker") REFERENCES "punch_card" ("id") ON DELETE SET NULL;
