// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs



Table schedules {
  id uuid [pk]
  cron varchar [not null]
  hook varchar [not null]
  owner varchar [not null]
  data varchar [not null, default: '']
  active bool [not null, default: true]
  till timestamptz [not null, default: `0001-01-01 00:00:00Z`, note: 'till what timestamp this schedule will run']
  created_at timestamptz [not null, default: `now()`]
  last_modified timestamptz [not null]
  Indexes {
    owner
  }
}

enum status {
  pending [note: 'Waiting to be processed']
  running
  success
  failure
}

Table next_occurence {
  id integer [pk, increment]
  schedule uuid [not null]
  worker uuid [default: null]
  manual bool [not null, default: false]
  status status [not null, default: 'pending']
  occurence timestamptz [default: null]
  last_updated timestamptz [not null]
  Indexes{
    worker
    occurence
    schedule
    (schedule, occurence) [unique]
  }
}

Table history {
  occurence_id integer [pk, not null]
  schedule uuid [not null]
  status status [not null]
  details text [not null]
  manual bool [not null, default: false]
  scheduled_at timestamptz [not null]
  started_at timestamptz [not null]
  completed_at timestamptz [not null]
  Indexes{
    schedule
  }
}

Table punch_card {
  id uuid [primary key]
  last_punch timestamptz [not null]
  created_at timestamptz [default: `now()`]
}

Ref:"schedules"."id" < "next_occurence"."schedule"
Ref:"schedules"."id" < "history"."schedule" [delete: cascade]
//Ref:"next_occurence"."id" < "history"."occurence_id" [delete: set default]
Ref:"punch_card"."id" < "next_occurence"."worker" [delete: set null]